appId: dev.ohoussein.cryptoapp
---
- tapOn: "Bitcoin"
- assertVisible: "Bitcoin (BTC)"
- takeScreenshot: screenshots/ios_crypto_details
- assertVisible: "Bitcoin is the first successful internet money.*"
- assertVisible: "Expand"
- assertVisible: "LINKS"
- tapOn: "Home page"
- assertVisible: "Buy Bitcoin"
- tapOn: ".*CryptoAppiOS"
- tapOn: "Blockchain"
- assertVisible: "Blockchain size"
- tapOn: ".*CryptoAppiOS"
- tapOn: "Source code"
- assertVisible: "Bitcoin Core integration/staging tree"
- tapOn: ".*CryptoAppiOS"
- tapOn: "Back"
